# stmfan

./: README.md
Inc/: stm32f0xx_hal_conf.h
Src/: compile.sh  compile_flags.txt  main.c  main.elf  stm32f0xx_hal_msp.c  stm32f0xx_it.c  sus.c  system_stm32f0xx.c  tims.h
computer/: CHANGELOG.md  LICENSE  computer.cabal
flash/: flash.sh  openocd.cfg
